--- a/app/src/main/res/layout/compensation_fragent_date_of_birth.xml
+++ b/app/src/main/res/layout/compensation_fragent_date_of_birth.xml
@@ -10,7 +10,7 @@
 
     <android.support.v7.widget.CardView
         android:id="@+id/cv_calendar"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="#F8F8F8"
         app:cardCornerRadius="8dp"
