--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,9 +17,10 @@
 
 <!--    new ui-->
     <color name="white">#FFFFFF</color>
+    <color name="blue_new_ui_text">#303A5D</color>
+    <color name="blue_new_ui">#004BDB</color>
     <color name="red_new_ui">#D52B1E</color>
     <color name="green_new_ui">#3CE261</color>
-    <color name="blue_new_ui">#004BDB</color>
 
     <color name="colorRed_transparent">#4FC91518</color>
 
