--- a/app/src/main/res/layout/steps_indicator.xml
+++ b/app/src/main/res/layout/steps_indicator.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    tools:background="@color/blue_new_ui_text">
 
     <FrameLayout
         android:id="@+id/fl_indicator_1"
@@ -106,6 +106,66 @@
             android:layout_gravity="center"
             android:text="7" />
     </FrameLayout>
+
+    <LinearLayout
+        android:id="@+id/ll_step_divider_1_2"
+        style="@style/Steps_divider"
+        android:layout_width="0dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/fl_indicator_2"
+        app:layout_constraintStart_toEndOf="@+id/fl_indicator_1"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/ll_step_divider_2_3"
+        style="@style/Steps_divider"
+        android:layout_width="0dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/fl_indicator_3"
+        app:layout_constraintStart_toEndOf="@+id/fl_indicator_2"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/ll_step_divider_3_4"
+        style="@style/Steps_divider"
+        android:layout_width="0dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/fl_indicator_4"
+        app:layout_constraintStart_toEndOf="@+id/fl_indicator_3"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/ll_step_divider_4_5"
+        style="@style/Steps_divider"
+        android:layout_width="0dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/fl_indicator_5"
+        app:layout_constraintStart_toEndOf="@+id/fl_indicator_4"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/ll_step_divider_5_6"
+        style="@style/Steps_divider"
+        android:layout_width="0dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/fl_indicator_6"
+        app:layout_constraintStart_toEndOf="@+id/fl_indicator_5"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:id="@+id/ll_step_divider_6_7"
+        style="@style/Steps_divider"
+        android:layout_width="0dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/fl_indicator_7"
+        app:layout_constraintStart_toEndOf="@+id/fl_indicator_6"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
