--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -236,5 +236,12 @@
         <item name="android:textAllCaps">true</item>
     </style>
 
+    <style name="Steps_divider" >
+        <item name="android:layout_height">4dp</item>
+        <item name="android:background">@color/white</item>
+        <item name="android:paddingBottom">8dp</item>
+        <item name="android:textAllCaps">true</item>
+    </style>
+
 
 </resources>
