--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -165,8 +165,8 @@
     </style>
 
     <style name="ActionItem_ActionsScreen" parent="ActionItem_72">
-        <item name="android:layout_width">wrap_content</item>
-        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">100dp</item>
+        <item name="android:layout_height">100dp</item>
         <item name="android:background">@drawable/circle_action_actions_screen</item>
     </style>
 
@@ -241,6 +241,13 @@
         <item name="android:background">@color/white</item>
         <item name="android:paddingBottom">8dp</item>
         <item name="android:textAllCaps">true</item>
+    </style>
+
+    <style name="Action_Text" >
+        <item name="android:textAlignment">center</item>
+        <item name="android:maxLines">2</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:fontFamily">@font/open_sans_semi_bold</item>
     </style>
 
 
