--- a/app/src/main/res/layout/item_request_v2.xml
+++ b/app/src/main/res/layout/item_request_v2.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardCornerRadius="8dp"
+    android:layout_marginTop="16dp"
     app:cardElevation="@dimen/default_elevation">
 
     <android.support.constraint.ConstraintLayout
