--- a/app/src/main/res/layout/activity_confirmation_v2.xml
+++ b/app/src/main/res/layout/activity_confirmation_v2.xml
@@ -17,12 +17,12 @@
         android:paddingBottom="@dimen/activity_vertical_margin">
 
         <TextView
-            style="@style/Text_default"
+            style="@style/Screen_Title"
+
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="@string/confirmation_title"
-            android:textSize="22sp" />
+            android:text="@string/confirmation_title" />
 
 
         <EditText
