--- a/app/src/main/res/layout/activity_login_v2.xml
+++ b/app/src/main/res/layout/activity_login_v2.xml
@@ -16,7 +16,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
         android:text="@string/login_title_v2"
-        android:textSize="22sp"
+        style="@style/Screen_Title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
