--- a/app/src/main/res/layout/item_request_message.xml
+++ b/app/src/main/res/layout/item_request_message.xml
@@ -13,7 +13,10 @@
         android:layout_weight="1"
         android:layout_height="wrap_content"
         android:padding="16dp"
-        android:layout_margin="16dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/request_message_background"
         android:orientation="vertical">
         <android.support.constraint.ConstraintLayout
