--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,6 +22,8 @@
     <color name="red_new_ui">#D52B1E</color>
     <color name="green_new_ui">#3CE261</color>
 
+    <color name="blue_new_ui_40">#66004BDB</color>
+
     <color name="colorRed_transparent">#4FC91518</color>
 
 
