style of request badge

--- a/app/src/main/res/drawable/request_closed_list_item.xml
+++ b/app/src/main/res/drawable/request_closed_list_item.xml
@@ -6,4 +6,8 @@
     <solid android:color="@color/blue_new_ui" />
 
     <corners android:radius="@dimen/request_item_badge_corner" />
+
+    <stroke
+        android:width="@dimen/request_item_stroke"
+        android:color="@color/white" />
 </shape>
