--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -230,7 +230,10 @@
     </style>
 
     <style name="RequestItem_badge" parent="Text_default">
-        <item name="android:padding">6dp</item>
+        <item name="android:paddingLeft">10dp</item>
+        <item name="android:paddingRight">10dp</item>
+        <item name="android:paddingTop">2dp</item>
+        <item name="android:paddingBottom">2dp</item>
     </style>
 
     <style name="Requests_PickImage" parent="Text_default">
