--- a/app/src/main/res/drawable/rounded_background_fab_inactive.xml
+++ b/app/src/main/res/drawable/rounded_background_fab_inactive.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/colorRed_transparent" />
+    <solid android:color="@color/colorRed_30" />
 
+    <stroke
+        android:width="4dp"
+        android:color="@color/white_30" />
 
     <corners android:radius="240dp" />
 </shape>
