--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -85,8 +85,9 @@
     <!--new ui common-->
     <style name="Text_default">
         <item name="android:textColor">@color/white</item>
-        <item name="android:fontFamily">@font/montserrat</item>
+        <item name="android:fontFamily">@font/font_montserrat</item>
         <item name="android:textSize">14sp</item>
+        <item name="android:lineSpacingExtra">4sp</item>
     </style>
 
     <style name="EditText_rounded">
