--- a/app/src/main/res/layout/activity_main_new_v2.xml
+++ b/app/src/main/res/layout/activity_main_new_v2.xml
@@ -31,41 +31,23 @@
     <TextView
         android:id="@+id/tv_avaliavle_minutes_label"
         style="@style/Text_default"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="135dp"
         android:text="@string/available_minutes"
-        app:layout_constraintStart_toStartOf="@+id/tv_timer"
+        app:layout_constraintStart_toStartOf="@+id/i_timer"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/tv_timer"
-        style="@style/Main_timer"
-        android:layout_width="280dp"
-        android:layout_height="80dp"
-        android:layout_marginTop="8dp"
-        android:gravity="center_vertical"
-        android:paddingStart="40dp"
-        android:paddingLeft="32dp"
-        android:paddingEnd="80dp"
-        android:paddingRight="80dp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_avaliavle_minutes_label"
-        tools:text="55:00" />
-
-    <ImageView
-        android:id="@+id/iv_add_minutes"
+    <include
+        android:id="@+id/i_timer"
+        layout="@layout/main_timer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:elevation="8dp"
-        app:layout_constraintBottom_toBottomOf="@+id/tv_timer"
-        app:layout_constraintEnd_toEndOf="@+id/tv_timer"
-        app:layout_constraintTop_toTopOf="@+id/tv_timer"
-        app:srcCompat="@drawable/ic_add_fab" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_avaliavle_minutes_label" />
+
 
     <TextView
         android:id="@+id/tv_minutes_expiration"
@@ -75,56 +57,45 @@
         android:layout_marginTop="8dp"
         android:text="to 07.08.2020"
         android:visibility="gone"
-        app:layout_constraintStart_toStartOf="@+id/tv_timer"
-        app:layout_constraintTop_toBottomOf="@+id/tv_timer"
-        tools:visibility="gone" />
+        app:layout_constraintStart_toStartOf="@+id/i_timer"
+        app:layout_constraintTop_toBottomOf="@+id/i_timer"
+        tools:visibility="visible" />
 
     <ImageView
         android:id="@+id/iv_requests"
         style="@style/ActionItem_72"
-        android:layout_marginStart="48dp"
-        android:layout_marginLeft="48dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="20dp"
         app:layout_constraintBottom_toTopOf="@+id/ll_call_container"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/i_timer"
         app:srcCompat="@drawable/ic_requests_mini" />
 
 
     <ImageView
         android:id="@+id/iv_help"
         style="@style/ActionItem_72"
-        android:layout_marginEnd="48dp"
-        android:layout_marginRight="48dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="20dp"
         app:layout_constraintBottom_toTopOf="@+id/ll_call_container"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/i_timer"
         app:srcCompat="@drawable/ic_help_mini" />
 
     <LinearLayout
         android:id="@+id/ll_call_container"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="280dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-        <LinearLayout
-            android:id="@+id/ll_call"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+
+        <ImageView
+            android:id="@+id/iv_call"
+            style="@style/ActionItem_Call"
             android:layout_gravity="center"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:paddingBottom="24dp"
-            android:visibility="gone"
-            tools:visibility="visible">
+            android:layout_marginBottom="30dp"
+            tools:visibility="gone"
+            app:srcCompat="@drawable/ic_call_button_new" />
 
-            <ImageView
-                style="@style/ActionItem_Call"
-                app:srcCompat="@drawable/ic_call_button_new" />
-
-        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/ll_no_minutes"
@@ -133,11 +104,12 @@
             android:layout_gravity="center"
             android:background="@drawable/ic_no_minutes_background"
             android:gravity="center"
+            android:paddingTop="20dp"
             android:orientation="vertical"
             android:paddingStart="48dp"
             android:paddingEnd="48dp"
             android:visibility="gone"
-            tools:visibility="gone">
+            tools:visibility="visible">
 
             <TextView
                 style="@style/Text_default"
@@ -145,7 +117,7 @@
                 android:layout_height="wrap_content"
                 android:text="@string/not_available_title"
                 android:textAlignment="center"
-                android:textSize="24sp"
+                android:textSize="22sp"
                 android:textStyle="bold" />
 
             <TextView
