--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,6 +21,8 @@
     <color name="blue_new_ui">#004BDB</color>
     <color name="red_new_ui">#D52B1E</color>
     <color name="green_new_ui">#3CE261</color>
+    <color name="timer_color_with_minutes">#c4c4c4</color>
+    <color name="timer_color_without_minutes">#0039A6</color>
 
 <!--    opacity-->
     <color name="white_30">#4DFFFFFF</color>
