--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -266,8 +266,9 @@
 
     <style name="Requests_dialog_start_button" parent="Text_default">
         <item name="android:textAlignment">center</item>
-        <item name="android:textSize">18sp</item>
+        <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/red_new_ui</item>
+        <item name="android:textAllCaps">true</item>
     </style>
 
 
