RequestsItem details screen done

--- a/app/src/main/res/layout/new_request_activity.xml
+++ b/app/src/main/res/layout/new_request_activity.xml
@@ -34,12 +34,12 @@
         android:id="@+id/tv_request_state"
         style="@style/RequestItem_badge"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:background="@drawable/request_new_toolbar"
-        android:textColor="@color/blue_new_ui"
+        android:background="@drawable/request_new_list_item"
         android:text="@string/status_new"
+        android:textColor="@color/blue_new_ui"
         app:layout_constraintBottom_toBottomOf="@+id/tv_toolbar_title"
         app:layout_constraintStart_toEndOf="@+id/tv_toolbar_title"
         app:layout_constraintTop_toTopOf="@+id/tv_toolbar_title"
