--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -134,10 +134,7 @@
         <item name="android:textSize">14sp</item>
     </style>
 
-    <style name="Text_user_info_block_title" parent="Text_news_item_title">
-        <item name="android:textColor">@color/blue_new_ui</item>
-        <item name="android:textSize">18sp</item>
-    </style>
+
 
     <style name="Text_tariff_title" parent="Text_user_info_block_title"></style>
 
@@ -151,9 +148,16 @@
         <item name="android:textSize">26sp</item>
     </style>
 
-    <style name="Text_user_info_block_value" parent="Text_default">
-        <item name="android:textColor">@android:color/black</item>
-        <item name="android:textSize">16sp</item>
+    <style name="Text_user_info_block_title" parent="Text_news_item_title">
+        <item name="android:textColor">@color/blue_new_ui</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">14sp</item>
+    </style>
+
+    <style name="Text_user_info_block_value" parent="Text_user_info_block_title">
+        <item name="android:textColor">@color/blue_new_ui_text</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textSize">14sp</item>
 
     </style>
 
