--- a/app/src/main/res/layout/activity_profile_v2.xml
+++ b/app/src/main/res/layout/activity_profile_v2.xml
@@ -68,7 +68,6 @@
         android:layout_width="0dp"
         android:layout_marginTop="28dp"
         android:drawablePadding="8dp"
-        android:padding="20dp"
         app:layout_constraintEnd_toEndOf="@+id/cardView"
         app:layout_constraintStart_toStartOf="@+id/cardView"
         app:layout_constraintTop_toBottomOf="@+id/cardView">
@@ -83,14 +82,15 @@
             <ImageView
                 android:layout_width="36dp"
                 android:layout_height="36dp"
-                android:background="@drawable/ic_add"
+                android:background="@drawable/ic_plus_simple"
                 android:backgroundTint="@color/white" />
 
             <TextView
                 style="@style/Text_default"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
+                android:layout_marginLeft="16dp"
+                android:fontFamily="@font/font_montserrat"
                 android:text="@string/personal_buy"
                 android:textSize="18sp"
                 android:textStyle="bold" />
