--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -94,11 +94,11 @@
         <item name="android:background">@drawable/rounded_background</item>
         <item name="android:fontFamily">@font/font_montserrat_semi_bold</item>
         <item name="android:textSize">14sp</item>
-        <item name="android:paddingStart">16sp</item>
-        <item name="android:paddingLeft">16sp</item>
+        <item name="android:paddingStart">16dp</item>
+        <item name="android:paddingEnd">16dp</item>
         <item name="android:textColor">@color/blue_new_ui</item>
         <item name="android:elevation" tools:targetApi="lollipop">8dp</item>
-        <item name="android:layout_height">48dp</item>
+        <item name="android:layout_height">50dp</item>
     </style>
 
 
@@ -133,7 +133,6 @@
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">14sp</item>
     </style>
-
 
 
     <style name="Text_tariff_title" parent="Text_user_info_block_title"></style>
