--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,6 +10,7 @@
     <dimen name="compensation_indicator_drawable_size">8dp</dimen>
     <dimen name="request_item_badge_corner">4dp</dimen>
     <dimen name="request_item_stroke">1dp</dimen>
+    <dimen name="stroke_button_fab">3dp</dimen>
 
     <!--    helps to make image in fab larger-->
 <!--    <dimen name="design_fab_image_size" tools:override="true">56dp</dimen>-->
