--- a/app/src/main/res/drawable/rounded_background_fab_blue.xml
+++ b/app/src/main/res/drawable/rounded_background_fab_blue.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/colorAccent" />
+    <solid android:color="@color/blue_new_ui" />
 
     <stroke
-        android:width="4dp"
+        android:width="@dimen/stroke_button_fab"
         android:color="@color/white" />
 
     <corners android:radius="240dp" />
