--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,6 +11,8 @@
     <dimen name="request_item_badge_corner">4dp</dimen>
     <dimen name="request_item_stroke">1dp</dimen>
     <dimen name="stroke_button_fab">3dp</dimen>
+    <dimen name="compensation_message_bottom_margin">100dp</dimen>
+    <dimen name="default_side_margins">16dp</dimen>
 
     <!--    helps to make image in fab larger-->
 <!--    <dimen name="design_fab_image_size" tools:override="true">56dp</dimen>-->
