--- a/app/src/main/res/layout/activity_compensation_prepare.xml
+++ b/app/src/main/res/layout/activity_compensation_prepare.xml
@@ -33,7 +33,7 @@
     <TextView
         android:id="@+id/tv_compensation_prepare"
         style="@style/CompensationStepDescription_Text"
-        android:layout_marginBottom="100dp"
+        android:layout_marginBottom="@dimen/compensation_message_bottom_margin"
         android:elevation="3dp"
         android:text="@string/compensation_prepare"
         app:layout_constraintBottom_toTopOf="@+id/b_yes"
