--- a/app/src/main/res/layout/compensation_fragent_insurance_id.xml
+++ b/app/src/main/res/layout/compensation_fragent_insurance_id.xml
@@ -5,6 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#00222222"
+    android:paddingStart="@dimen/default_side_margins"
+    android:paddingEnd="@dimen/default_side_margins"
     tools:background="#80D66D6D">
 
     <EditText
