--- a/app/src/main/res/layout/steps_indicator.xml
+++ b/app/src/main/res/layout/steps_indicator.xml
@@ -4,168 +4,133 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="horizontal"
     android:paddingStart="@dimen/default_side_margins"
     android:paddingEnd="@dimen/default_side_margins"
-    android:orientation="horizontal"
     tools:background="@color/blue_new_ui_text">
 
-    <FrameLayout
-        android:layout_marginStart="4dp"
-        android:id="@+id/fl_indicator_1"
+    <TextView
+        android:id="@+id/tv_indicator_1"
         style="@style/CompensationStepIndicator"
+        android:layout_marginStart="4dp"
+        android:gravity="center"
+        android:text="1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            style="@style/CompensationStepIndicator_Text"
-            android:layout_gravity="center"
-            android:text="1" />
-    </FrameLayout>
+    <TextView
+        android:id="@+id/tv_indicator_2"
+        style="@style/CompensationStepIndicator"
+        android:gravity="center"
+        android:text="2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/tv_indicator_3"
+        app:layout_constraintStart_toEndOf="@+id/tv_indicator_1"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <FrameLayout
-        android:id="@+id/fl_indicator_2"
+    <TextView
+        android:id="@+id/tv_indicator_3"
+        style="@style/CompensationStepIndicator"
+        android:gravity="center"
+        android:text="3"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/tv_indicator_4"
+        app:layout_constraintStart_toEndOf="@+id/tv_indicator_2"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_indicator_4"
+        style="@style/CompensationStepIndicator"
+        android:gravity="center"
+        android:text="4"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/tv_indicator_5"
+        app:layout_constraintStart_toEndOf="@+id/tv_indicator_3"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:gravity="center"
+        android:text="5"
+        android:id="@+id/tv_indicator_5"
         style="@style/CompensationStepIndicator"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/fl_indicator_3"
-        app:layout_constraintStart_toEndOf="@+id/fl_indicator_1"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintEnd_toStartOf="@+id/tv_indicator_6"
+        app:layout_constraintStart_toEndOf="@+id/tv_indicator_4"
+        app:layout_constraintTop_toTopOf="parent"/>
 
-        <TextView
-            style="@style/CompensationStepIndicator_Text"
-            android:layout_gravity="center"
-            android:text="2" />
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/fl_indicator_3"
+    <TextView
+        android:gravity="center"
+        android:text="6"
+        android:id="@+id/tv_indicator_6"
         style="@style/CompensationStepIndicator"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/fl_indicator_4"
-        app:layout_constraintStart_toEndOf="@+id/fl_indicator_2"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintEnd_toStartOf="@+id/tv_indicator_7"
+        app:layout_constraintStart_toEndOf="@+id/tv_indicator_5"
+        app:layout_constraintTop_toTopOf="parent"/>
 
-        <TextView
-            style="@style/CompensationStepIndicator_Text"
-            android:layout_gravity="center"
-            android:text="3" />
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/fl_indicator_4"
+    <TextView
+        android:gravity="center"
+        android:text="7"
+        android:id="@+id/tv_indicator_7"
         style="@style/CompensationStepIndicator"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/fl_indicator_5"
-        app:layout_constraintStart_toEndOf="@+id/fl_indicator_3"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            style="@style/CompensationStepIndicator_Text"
-            android:layout_gravity="center"
-            android:text="4" />
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/fl_indicator_5"
-        style="@style/CompensationStepIndicator"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/fl_indicator_6"
-        app:layout_constraintStart_toEndOf="@+id/fl_indicator_4"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            style="@style/CompensationStepIndicator_Text"
-            android:layout_gravity="center"
-            android:text="5" />
-    </FrameLayout>
-
-    <FrameLayout
-
-        android:id="@+id/fl_indicator_6"
-        style="@style/CompensationStepIndicator"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/fl_indicator_7"
-        app:layout_constraintStart_toEndOf="@+id/fl_indicator_5"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            style="@style/CompensationStepIndicator_Text"
-            android:layout_gravity="center"
-            android:text="6" />
-    </FrameLayout>
-
-    <FrameLayout
         android:layout_marginEnd="4dp"
-        android:id="@+id/fl_indicator_7"
-        style="@style/CompensationStepIndicator"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"/>
 
-        <TextView
-            style="@style/CompensationStepIndicator_Text"
-            android:layout_gravity="center"
-            android:text="7" />
-    </FrameLayout>
-
-    <LinearLayout
-        android:id="@+id/ll_step_divider_1_2"
+    <View
+        android:id="@+id/step_divider_1_2"
         style="@style/Steps_divider"
         android:layout_width="0dp"
-        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/fl_indicator_2"
-        app:layout_constraintStart_toEndOf="@+id/fl_indicator_1"
+        app:layout_constraintEnd_toStartOf="@+id/tv_indicator_2"
+        app:layout_constraintStart_toEndOf="@+id/tv_indicator_1"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
-        android:id="@+id/ll_step_divider_2_3"
+    <View
+        android:id="@+id/step_divider_2_3"
         style="@style/Steps_divider"
         android:layout_width="0dp"
-        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/fl_indicator_3"
-        app:layout_constraintStart_toEndOf="@+id/fl_indicator_2"
+        app:layout_constraintEnd_toStartOf="@+id/tv_indicator_3"
+        app:layout_constraintStart_toEndOf="@+id/tv_indicator_2"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
-        android:id="@+id/ll_step_divider_3_4"
+    <View
+        android:id="@+id/step_divider_3_4"
         style="@style/Steps_divider"
         android:layout_width="0dp"
-        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/fl_indicator_4"
-        app:layout_constraintStart_toEndOf="@+id/fl_indicator_3"
+        app:layout_constraintEnd_toStartOf="@+id/tv_indicator_4"
+        app:layout_constraintStart_toEndOf="@+id/tv_indicator_3"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
-        android:id="@+id/ll_step_divider_4_5"
+    <View
+        android:id="@+id/step_divider_4_5"
         style="@style/Steps_divider"
         android:layout_width="0dp"
-        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/fl_indicator_5"
-        app:layout_constraintStart_toEndOf="@+id/fl_indicator_4"
+        app:layout_constraintEnd_toStartOf="@+id/tv_indicator_5"
+        app:layout_constraintStart_toEndOf="@+id/tv_indicator_4"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
-        android:id="@+id/ll_step_divider_5_6"
+    <View
+        android:id="@+id/step_divider_5_6"
         style="@style/Steps_divider"
         android:layout_width="0dp"
-        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/fl_indicator_6"
-        app:layout_constraintStart_toEndOf="@+id/fl_indicator_5"
+        app:layout_constraintEnd_toStartOf="@+id/tv_indicator_6"
+        app:layout_constraintStart_toEndOf="@+id/tv_indicator_5"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <LinearLayout
-        android:id="@+id/ll_step_divider_6_7"
+    <View
+        android:id="@+id/step_divider_6_7"
         style="@style/Steps_divider"
         android:layout_width="0dp"
-        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/fl_indicator_7"
-        app:layout_constraintStart_toEndOf="@+id/fl_indicator_6"
+        app:layout_constraintEnd_toStartOf="@+id/tv_indicator_7"
+        app:layout_constraintStart_toEndOf="@+id/tv_indicator_6"
         app:layout_constraintTop_toTopOf="parent" />
 
 
