--- a/app/src/main/res/layout/compensation_fragent_date_of_birth.xml
+++ b/app/src/main/res/layout/compensation_fragent_date_of_birth.xml
@@ -36,10 +36,8 @@
     <TextView
         android:id="@+id/tv_compensation_date_of_birth"
         style="@style/CompensationStepDescription_Text"
-        android:layout_marginTop="32dp"
         android:text="@string/compensation_step_date_of_birth"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_width="match_parent"
         app:layout_constraintTop_toBottomOf="@+id/cv_calendar" />
 </android.support.constraint.ConstraintLayout>
