--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -208,13 +208,14 @@
     <style name="CompensationStepDescription_Text" parent="Text_default">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">32dp</item>
         <item name="android:textSize">22sp</item>
         <item name="android:fontFamily">@font/font_montserrat_semi_bold</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:layout_marginStart">56dp</item>
-        <item name="android:layout_marginLeft">56dp</item>
-        <item name="android:layout_marginEnd">56dp</item>
-        <item name="android:layout_marginRight">56dp</item>
+        <item name="android:layout_marginStart">@dimen/compensation_message_margin</item>
+        <item name="android:layout_marginLeft">@dimen/compensation_message_margin</item>
+        <item name="android:layout_marginEnd">@dimen/compensation_message_margin</item>
+        <item name="android:layout_marginRight">@dimen/compensation_message_margin</item>
         <item name="android:gravity">center_horizontal</item>
         <item name="android:textAlignment">center</item>
     </style>
