tariff sacreen done

--- a/app/src/main/res/layout/item_tariff.xml
+++ b/app/src/main/res/layout/item_tariff.xml
@@ -4,16 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="16dp"
+    android:layout_marginTop="12dp"
     app:cardCornerRadius="8dp"
-    android:layout_marginTop="8dp"
     app:cardElevation="@dimen/default_elevation"
     app:elevation="@dimen/default_elevation">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="16dp">
+        android:padding="12dp">
 
         <TextView
             android:id="@+id/tv_tariff_name"
@@ -42,10 +41,8 @@
             style="@style/Text_tariff_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_tariff_minutes"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_tariff_name"
             tools:text="530$" />
 
         <TextView
@@ -53,7 +50,7 @@
             style="@style/Text_tariff_minutes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:text="300 min."
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
