--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -139,13 +139,13 @@
     <style name="Text_tariff_title" parent="Text_user_info_block_title"></style>
 
     <style name="Text_tariff_price" parent="Text_user_info_block_title">
-        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textColor">@color/blue_new_ui_text</item>
         <item name="android:textSize">22sp</item>
     </style>
 
     <style name="Text_tariff_minutes" parent="Text_tariff_price">
         <item name="android:textColor">@color/red_new_ui</item>
-        <item name="android:textSize">26sp</item>
+        <item name="android:textSize">32sp</item>
     </style>
 
     <style name="Text_user_info_block_title" parent="Text_news_item_title">
